# allin-one

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  RSSHUB_OPTIMIZATION_SUMMARY.md  build-local.sh  deploy-local.sh  deploy-remote.sh  deploy.sh  docker-compose.local.yml  docker-compose.remote.yml  docker-compose.yml  local-dev.sh  logs-local.sh  logs-remote.sh  logs.sh
fountain/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
fountain/src-tauri/capabilities/: default.json  douban-remote.json  twitter-remote.json  wechat-remote.json  zhihu-remote.json
fountain/src-tauri/icons/: icon.icns
fountain/src-tauri/permissions/autogenerated/: capture_douban_cookies.toml  capture_twitter_ct0.toml  capture_wechat_cookies.toml  capture_zhihu_cookies.toml  close_wechat_webview.toml  get_credential.toml  get_sync_status.toml  open_douban_webview.toml  open_twitter_webview.toml  open_wechat_webview.toml  open_zhihu_webview.toml  poll_bilibili_qr_status.toml  save_twitter_cookies.toml  start_bilibili_qr_login.toml  sync_now.toml  sync_platform.toml  test_server_connection.toml  validate_bilibili_cookie.toml  validate_douban_cookie.toml  validate_github_token.toml  validate_twitter_cookie.toml  validate_wechat_read_cookie.toml  validate_zhihu_cookie.toml
fountain/src-tauri/src/: config.rs  credential_store.rs  lib.rs  main.rs  scheduler.rs
fountain/src-tauri/src/commands/: credentials.rs  mod.rs  settings.rs  sync.rs
fountain/src-tauri/src/sync/: api_client.rs  apple_books.rs  bilibili.rs  browser_bookmarks.rs  mod.rs  (+6 more)
(+335 files in other folders)
