[package]
name = "fountain"
version = "0.1.0"
description = "Fountain — Allin-One Desktop Sync Client"
authors = ["Allin-One"]
edition = "2021"

[lib]
name = "fountain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fountain"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-cron-scheduler = "0.13"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
qrcodegen = "1.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
plist = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Credentials"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
